# Surper_GCG_ResearchWorkFlow

./: .gitignore  COLAB_PIPELINE.md  MECHANISM_SCAN_PIPELINE.md  README.md  Surper_GCG_Colab.ipynb  pyproject.toml  run_pipeline.py
analysis/: static_12b_migration_audit.py
docs/: 11后实验重构方案.md  12B_机制发现流水线_实验账本.md  12B_机制研究科技树总表.md  README.md
experiments/: exp_00_diagnosis.py  exp_01_refusal.py  exp_01b_cross_layer.py  exp_02_sysprompt.py  exp_03_system_prompt.py  exp_04_multidir.py  exp_04_som.py  exp_04b_som_orth.py  exp_05_dbdi.py  exp_06_prefill_steering.py  exp_06b_prefill_concept.py  exp_07_full_output_verify.py  exp_07_identity_layer.py  exp_08_concept_gcg.py  exp_08a_direct_layer_verify.py  exp_09_svd_identity.py  exp_09b_identity_compete.py  exp_10_suicide_contrast.py  exp_12_core_claim_robustness.py  exp_16_safe_response_dictionary.py  exp_19_l17_l23_late_impact.py  exp_38_whitebox_attack_feasibility.py  exp_39_context_knowledge_bypass.py
pipeline/: README.md  __init__.py  catalog.py
probes/: ablate.py  extract.py  model_adapter.py  model_config.py  model_structure.py  shield_review.py  stats.py
